--- a/src/CodingSessionFT.Api/Properties/launchSettings.json
+++ b/src/CodingSessionFT.Api/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false, 
     "anonymousAuthentication": true, 
     "iisExpress": {
-      "applicationUrl": "http://localhost:51302",
-      "sslPort": 44383
+      "applicationUrl": "http://localhost:64911",
+      "sslPort": 44378
     }
   },
   "profiles": {
@@ -15,7 +15,7 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "CodingSessionFT": {
+    "CodingSessionFT.Api": {
       "commandName": "Project",
       "launchBrowser": true,
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
