- implement Polly examples
- make additional refactoring
- add README.md file

--- a/src/CodingSessionFT.PollyClient/CodingSessionFT.PollyClient.csproj
+++ b/src/CodingSessionFT.PollyClient/CodingSessionFT.PollyClient.csproj
@@ -9,6 +9,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Polly" />
+    <PackageReference Include="Polly.Extensions.Http" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CodingSessionFT.Core\CodingSessionFT.Core.csproj" />
   </ItemGroup>
 
