--- a/src/CodingSessionFT.Api/CodingSessionFT.Api.csproj
+++ b/src/CodingSessionFT.Api/CodingSessionFT.Api.csproj
@@ -1,7 +1,10 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
+  <Sdk Name="Microsoft.Build.CentralPackageVersions" Version="2.0.52" />
+
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TreatWarningsAsErrors>True</TreatWarningsAsErrors>
   </PropertyGroup>
 
   <ItemGroup>
