--- a/src/Packages.props
+++ b/src/Packages.props
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <ItemGroup>
+
     <GlobalPackageReference Include="StyleCop.Analyzers" Version="1.1.118" IncludeAssets="Analyzers;Build" PrivateAssets="All" />
+
+    <PackageReference Update="Polly" Version="[7.2.2]" />
+    <PackageReference Update="Polly.Extensions.Http" Version="[3.0.0]" />
+
   </ItemGroup>
 </Project>
